--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  mobx: ^1.2.1+4
+  flutter_mobx: ^1.1.0+2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mobx_codegen: ^1.1.2
+  build_runner: ^1.10.6
 
 
 # For information on the generic Dart part of this file, see the
