--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   mobx: ^1.2.1+4
   flutter_mobx: ^1.1.0+2
+  provider: ^4.3.2+2
+
 
 dev_dependencies:
   flutter_test:
